refactor : List.get(0) 을 getFirst() 수정(가독성)