@@ -13,11 +13,11 @@ public class OutputView {
 
     public void printWinner(List<String> winner){
         if(winner.size()==1){
-            System.out.println("최종 우승자 : " + winner.get(0));
+            System.out.println("최종 우승자 : " + winner.getFirst());
             return;
         }
         StringBuilder sb = new StringBuilder();
-        String firstWinner = winner.get(0);
+        String firstWinner = winner.getFirst();
         sb.append(firstWinner);
         winner.remove(firstWinner);
         for(String name : winner){
